--- a/templates/kontakt.html
+++ b/templates/kontakt.html
@@ -34,7 +34,7 @@
         <div>
             <div class="row">
                 <div class="col-md-2"></div>
-                <div class="col-md-8 blackbox">
+                <div class="col-md-8 blackboxblue">
                     <span class="blackboxspanrowone">Kontakt: Gerne senden wir Ihnen weitere</span>
                     <span class="blackboxspanrowtwo">Informationen und Muster zur Ansicht.</span>
                 </div>
@@ -43,27 +43,26 @@
         </div>
     </div>
 
-    <div class="col-md-12 dotsimage"></div>
+    <div class="col-md-12 dotsimageblue"></div>
 
-    <div class="topmiddleLayoutayout col-md-12">
+    <div class="topmiddleLayoutBlue col-md-12">
         <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6" style="padding-top:10px;font-size:larger">
+            <div class="col-md-2"></div>
+            <div class="col-md-8" style="padding-top:10px;font-size:larger">
                 Der Kontakt: Sind Sie interessiert an unseren Karten?
                 Nehmen Sie Kontakt mit uns auf, gerne senden wir Ihnen weitere
                 Informationen oder fertigen auf Wunsch auch Sonderbestellungen an.
                 <br /><br />
                 <b>Kontakt:</b> Irène Prabhu-Burri / Nicole Schneuwly
-                <a href="mailto:dottilotti@yahoo.de"><em>dottilotti@yahoo.de</em></a>  
-                
+                <a href="mailto:dottilotti@yahoo.de"><em>dottilotti@yahoo.de</em></a>
+
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
 
     </div>
 
-    <div class="col-md-12 bottomLayoutayout bottomLayoutayout_kontakt">
-        
-    </div>
+    <div class="col-md-12 dotsimagebottomblue"></div>
+    <div class="col-md-12 bottomLayoutayout bottomLayoutayout_kontakt"></div>
 
 </div>
