--- a/default_theme.css
+++ b/default_theme.css
@@ -11,13 +11,13 @@ body {
   background-color: #000;
   background-image: url("images/animiertes_neu_GIF_NS_2015.gif");
   height: 120px;
-  width: 804px; }
+  /*width:804px;*/ }
 
 .blackboxblue {
   background-color: #000;
   background-image: url("images/Rahmen_blue_dotti_lotti_120.png");
   height: 120px;
-  width: 804px; }
+  /*width:804px;*/ }
 
 .dotsimage {
   background-image: url("images/Linie_orange_dotti_lotti.png");
@@ -115,5 +115,15 @@ body {
 
 .navbar-inverse .navbar-nav > li > a:focus {
   color: #000; }
+
+.slick-prev::before, .slick-next::before {
+  color: grey !important;
+  font-family: "slick";
+  font-size: 20px;
+  line-height: 1;
+  opacity: 0.75;
+  border-radius: 15px;
+  padding: 3px;
+  padding-top: 5px; }
 
 /*# sourceMappingURL=default_theme.css.map */
