--- a/templates/karten.html
+++ b/templates/karten.html
@@ -1,8 +1,8 @@
 ﻿<div class="container">
 
-    <div class="toplayouttopkarten col-md-12"></div>
+    <div class="toplayouttopkarten col-lg-"></div>
 
-    <div class="toplayouttopnav col-md-12">
+    <div class="toplayouttopnav col-lg-">
         <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed dottiNav" role="navigation">
             <div class="container-fluid">
                 <div class="col-md-2"></div>
@@ -30,7 +30,7 @@
         </nav>
     </div>
 
-    <div class="toplayoutbottom col-md-12">
+    <div class="toplayoutbottom col-lg-">
         <div>
             <div class="row">
                 <div class="col-md-2"></div>
@@ -43,24 +43,69 @@
         </div>
     </div>
 
-    <div class="col-md-12 dotsimage"></div>
+    <div class="col-lg- dotsimage"></div>
 
-    <div class="topmiddleLayoutayout col-md-12">
+    <div class="topmiddleLayoutayout col-lg-">
         <div class="row">
+
+            <!-- pictures 160 x 180 with one line on code -->
             <div class="col-md-2"></div>
-            <div class="col-md-8" style="padding-top:10px;font-size:larger">
-                Das Sortiment: Im Moment haben wir drei Design-Linien in Produktion.
-                Die genähten Karten erhalten ihre Hochwertigkeit durch das taktile Erlebnis
-                mit den wundervoll gefertigten indischen Stoffen und Bordüren. Im Gegensatz dazu – eine Linie mit frechen, frischen Farben im Punkte-Style. Ausserdem die wundervoll-verzierten Mandala-Karten > handgefertigt und hochwertig gedruckt.
+            <div class="col-md-8" style="padding-top:10px;">
+                <slick dots="true" infinite="false" speed="300" slides-to-show="4" touch-move="false" slides-to-scroll="4">
+                    <div><img src="../images/india_style/india_style_1.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_2.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_3.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_4.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_5.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_6.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_7.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_8.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_9.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_10.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_11.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_12.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_13.jpg" /></div>
+                    <div><img src="../images/india_style/india_style_14.jpg" /></div>
+                    
+                    <div><img src="../images/mandala_style/mandala_style_1.jpg" /></div>
+                    <div><img src="../images/mandala_style/mandala_style_2.jpg" /></div>
+                    <div><img src="../images/mandala_style/mandala_style_3.jpg" /></div>
+                    <div><img src="../images/mandala_style/mandala_style_4.jpg" /></div>
+                    <div><img src="../images/mandala_style/mandala_style_5.jpg" /></div>
+                    <div><img src="../images/mandala_style/mandala_style_6.jpg" /></div>
+                    <div><img src="../images/mandala_style/mandala_style_7.jpg" /></div>
+                    <div><img src="../images/mandala_style/mandala_style_8.jpg" /></div>
+                    
+                    <div><img src="../images/dotti_style/dotti_style_1.jpg" /></div>
+                    <div><img src="../images/dotti_style/dotti_style_2.jpg" /></div>
+                    <div><img src="../images/dotti_style/dotti_style_3.jpg" /></div>
+                    <div><img src="../images/dotti_style/dotti_style_4.jpg" /></div>
+                    <div><img src="../images/dotti_style/dotti_style_5.jpg" /></div>
+
+                </slick>
             </div>
             <div class="col-md-2"></div>
+
+
+
+            <!--<img src="../images/slider_mandalas_dotti_lotti_2.gif" width="400" />-->
+            <!--<div class="col-md-2"></div>
+            <div class="col-md-8" style="font-size: larger; -ms-align-content: center; -webkit-align-content: center; align-content: center;">
+
+                    <img src="../images/slider_mandalas_dotti_lotti_2.gif" width="400" style="text-align:center;" />
+                    Das Sortiment: Im Moment haben wir drei Design-Linien in Produktion.
+                    Die genähten Karten erhalten ihre Hochwertigkeit durch das taktile Erlebnis
+                    mit den wundervoll gefertigten indischen Stoffen und Bordüren. Im Gegensatz dazu – eine Linie mit frechen, frischen Farben im Punkte-Style. Ausserdem die wundervoll-verzierten Mandala-Karten > handgefertigt und hochwertig gedruckt.
+
+            </div>
+            <div class="col-md-2"></div>-->
         </div>
 
     </div>
 
 
-    <div class="col-md-12  bottomLayoutayout bottomLayoutayout_karten">
-        <div class="col-md-12 dotsimagebottom"></div>
+    <div class="col-lg-  bottomLayoutayout bottomLayoutayout_karten">
+        <div class="col-lg- dotsimagebottom"></div>
     </div>
 
 </div>
