--- a/templates/kartendetails.html
+++ b/templates/kartendetails.html
@@ -11,7 +11,7 @@
 
             <div class="col-lg-6">
 
-                <h1>{{title}}</h1>
+                <h3>{{title}}</h3>
                 <hr>
 
                 <form class="form-horizontal" style="margin-left:5px;">
@@ -31,12 +31,12 @@
                     <div class="form-group">
                         <label for="inputEmail" class="control-label col-xs-3" style="text-align: left;">Einzelpreis:</label>
                         <div class="control-label col-xs-8" style="text-align: left;">
-                            <span>CHF 4.50</span>
+                            <span>{{price}}</span>
                         </div>
                     </div>
 
                     <div class="form-group control-label" style="margin-left:0;text-align: left;">
-                        <span>Ab 10 Karten 3.50 Ab 100 Karten 2.50</span>
+                        <span>{{setprice}}</span>
                     </div>
 
                     <div class="form-group">
